# PokeCPLUS

./: CMakeLists.txt  README.md
includes/: Achievement.h  Ball.h  Envionment.h  Pokemon.h  User.h  serializable.h
includes/console_gui/: gui.h
includes/data/: Data.h
save/: placeholder.txt  user_data.json
src/: Ball.cpp  Environment.cpp  Pokemon.cpp  User.cpp  main.cpp  serialiable.cpp
src/console_gui/: gui.cpp
src/pokeData/: Data.cpp
utils/: style_print.cpp
utils/validators/: validateUsername.cpp
